--- a/BraveChess/BraveChess/BraveChess.csproj
+++ b/BraveChess/BraveChess/BraveChess.csproj
@@ -127,7 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Scenes\Level0.cs" />
+    <Compile Include="Scenes\NetworkedLevel.cs" />
     <Compile Include="Scenes\StandartLevel.cs" />
     <Compile Include="Screens\MainMenu.cs" />
     <Compile Include="Screens\Screen.cs" />
