--- a/BraveChess/BraveChess/BraveChess.csproj
+++ b/BraveChess/BraveChess/BraveChess.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Engines\InputEngine.cs" />
     <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Engines\NetworkEngine.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Objects\Piece.cs" />
     <Compile Include="Objects\Square.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
