Problems with rumminate gui, swaped for simple Menu(Working)

--- a/BraveChess/BraveChess/BraveChess.csproj
+++ b/BraveChess/BraveChess/BraveChess.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Engines\NetworkEngine.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Notification.cs" />
+    <Compile Include="Objects\Button.cs" />
     <Compile Include="Objects\Piece.cs" />
     <Compile Include="Objects\Square.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
