--- a/BraveChess/BraveChess/BraveChess.csproj
+++ b/BraveChess/BraveChess/BraveChess.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Objects\Square.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Scenes\TimedNetworkGame.cs" />
     <Compile Include="Scenes\NetworkedLevel.cs" />
     <Compile Include="Scenes\StandardLevel.cs" />
   </ItemGroup>
